--- a/layouts/default.jade
+++ b/layouts/default.jade
@@ -1,5 +1,12 @@
 doctype 5
 html
+  | <script language="javascript" type="text/javascript">
+  | //<![CDATA[
+  | var tl_loc0=(window.location.protocol == "https:")? "https://secure.comodo.net/trustlogo/javascript/trustlogo.js" :
+  | "http://www.trustlogo.com/trustlogo/javascript/trustlogo.js";
+  | document.writeln('<scr' + 'ipt language="JavaScript" src="'+tl_loc0+'" type="text\/javascript">' + '<\/scr' + 'ipt>');
+  | //]]>
+  | </script>
   head
     block head
       title #{title}
@@ -34,11 +41,12 @@ html
     
     div.footer
       div.container
-        span.copyright.pull-right
-          &#169; #{copyrightYear} #{copyrightName}
         span.pull-right
-          img(src='/media/comodo_secure_76x26_white.png')
+          | <script language="JavaScript" type="text/javascript">
+          | TrustLogo("https://app.outrightmental.com/media/comodo_secure_76x26_white.png", "CL1", "none");
+          | </script>
         ul.links
+          li: a(href='http://www.outrightmental.com',target='_blank') &#169; #{copyrightYear} #{copyrightName}
           li: a(href='/') Home
           li: a(href='/contact/') Contact
         div.clearfix
