Updates, digging into LESS structure

--- a/public/less/bootstrap-build.less
+++ b/public/less/bootstrap-build.less
@@ -1,5 +1,5 @@
 // Core variables and mixins
-@import "bootstrap-vars.less";
+@import "vars/bootstrap-vars";
 @import "../vendor/bootstrap/less/mixins.less";
 
 // Reset
@@ -49,4 +49,4 @@
 @import "../vendor/bootstrap/less/responsive-utilities.less";
 
 // Theme
-@import "bootstrap-theme.less";
+@import "theme/bootstrap-theme";
