--- a/public/views/index.less
+++ b/public/views/index.less
@@ -1,4 +1,4 @@
-@import '../less/bootstrap-vars.less';
+@import '../less/../less/vars/bootstrap-vars';
 
 .jumbotron {
   background-color: transparent;
