--- a/layouts/default.jade
+++ b/layouts/default.jade
@@ -18,8 +18,7 @@ html
       div.container
         div.navbar-header
           a.navbar-brand(href='/')
-            img.navbar-logo(src='/media/logo-symbol-64x64.png')
-            span.navbar-brand-label #{projectName}
+            img.navbar-logo(src='/media/mental-roger.png' alt=navbar-brand-label #{projectName})
           button.navbar-toggle.collapsed(data-toggle='collapse', data-target='.my-navbar-collapse')
             span.icon-bar
             span.icon-bar
