--- a/public/views/admin/categories/index.less
+++ b/public/views/admin/categories/index.less
@@ -1,5 +1,5 @@
 @import "../../../vendor/bootstrap/less/mixins.less";
-@import "../../../less/bootstrap-vars.less";
+@import "../../../less/../../../less/vars/bootstrap-vars";
 
 .input-group {
   margin-bottom: 20px;
