header https://www.pivotaltracker.com/story/show/61527028

--- a/layouts/admin.jade
+++ b/layouts/admin.jade
@@ -18,7 +18,7 @@ html
             span.icon-bar
             span.icon-bar
         div.navbar-collapse.my-navbar-collapse.collapse
-          ul.nav.navbar-nav
+          ul.nav.navbar-nav.pull-right
             li.dropdown
               a.dropdown-toggle(href='#', data-toggle='dropdown')
                 | System 
