--- a/layouts/default.jade
+++ b/layouts/default.jade
@@ -24,12 +24,11 @@ html
             span.icon-bar
             span.icon-bar
         div.navbar-collapse.my-navbar-collapse.collapse
-          ul.nav.navbar-nav
+          ul.nav.navbar-nav.pull-right
             li: a(href='/') Home
             li: a(href='/about/') About
-            li: a(href='/signup/') Sign Up
             li: a(href='/contact/') Contact
-          ul.nav.navbar-nav.navbar-right
+            li: a(href='/signup/') Sign Up
             li: a(href='/login/')
               i.fa.fa-user
               |  Sign In
