--- a/layouts/admin.jade
+++ b/layouts/admin.jade
@@ -1,73 +1,38 @@
-doctype 5
-html
-  head
-    block head
-      title #{title}
-    meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    link(rel='stylesheet', href='/layouts/core.min.css?#{cacheBreaker}')
-    link(rel='stylesheet', href='/layouts/admin.min.css?#{cacheBreaker}')
-    block neck
-  body
-    div.navbar.navbar-inverse.navbar-fixed-top
-      div.container
-        div.navbar-header
-          a.navbar-brand(href='/admin/')
-            img.navbar-logo(src='/media/mental-roger.png' alt=navbar-brand-label #{projectName})
-          button.navbar-toggle.collapsed(data-toggle='collapse', data-target='.my-navbar-collapse')
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-        div.navbar-collapse.my-navbar-collapse.collapse
-          ul.nav.navbar-nav.pull-right
-            li.dropdown
-              a.dropdown-toggle(href='#', data-toggle='dropdown')
-                | System 
-                span.caret
-              ul.dropdown-menu
-                li.dropdown-header Pivoted Settings
-                li: a(href='/admin/statuses/') Statuses
-                li: a(href='/admin/categories/') Categories
-                li.divider
-                li.dropdown-header User Admin
-                li: a(href='/admin/users/') Users
-                li: a(href='/admin/accounts/') Accounts
-                li: a(href='/admin/administrators/') Administrators
-                li: a(href='/admin/admin-groups/') Admin Groups
-          form.navbar-form.pull-right#_search
-    
-    div.page
-      div.container
-        block body
-    
-    div.footer
-      div.container
-        div.inner
-          span.copyright.pull-right
-            &#169; #{copyrightYear} #{copyrightName}
-          ul.links
-            li: a(href='/') Home
-            li: a(href='/logout/') Sign Out
-          div.clearfix
-    
-    div.ajax-spinner
-      img(src='/media/ajax-pulse.gif')
-    
-    script(type='text/template', id='tmpl-_search')
-      div.dropdown
-        input.form-control(name='_search', type='text', placeholder='search', tab-index='1')
-        ul#_search-results-rows.dropdown-menu
-    script(type='text/template', id='tmpl-_search-results-row')
-      |<% if (type && type == 'header') { %>
-      |<%= name %>
-      |<% } else { %>
-      a(href!='<%= url %>') <%= name %>
-      |<% } %>
-    script(type='text/template', id='tmpl-_search-results-empty-row')
-      li.dropdown-header no docs matched
-    
-    //if lte IE 9
-      script(src='/layouts/ie-sucks.min.js?#{cacheBreaker}')
-    script(src='/layouts/core.min.js?#{cacheBreaker}')
-    script(src='/layouts/admin.min.js?#{cacheBreaker}')
-    
-    block feet
+extends _global
+
+block layoutCss
+  link(rel='stylesheet', href='/layouts/core.min.css?#{cacheBreaker}')
+  link(rel='stylesheet', href='/layouts/admin.min.css?#{cacheBreaker}')
+  link(rel='stylesheet', href='https://s3.amazonaws.com/outrightmental/vendor/font-awesome/css/font-awesome.min.css')
+
+block layoutNav
+  li.dropdown
+    a.dropdown-toggle(href='#', data-toggle='dropdown')
+      | System
+      span.caret
+    ul.dropdown-menu
+      li.dropdown-header Pivoted Settings
+      li: a(href='/admin/statuses/') Statuses
+      li: a(href='/admin/categories/') Categories
+      li.divider
+      li.dropdown-header User Admin
+      li: a(href='/admin/users/') Users
+      li: a(href='/admin/accounts/') Accounts
+      li: a(href='/admin/administrators/') Administrators
+      li: a(href='/admin/admin-groups/') Admin Groups
+  form.navbar-form.pull-right#_search
+
+block layoutScripts
+  script(src='/layouts/admin.min.js?#{cacheBreaker}')
+  script(type='text/template', id='tmpl-_search')
+    div.dropdown
+      input.form-control(name='_search', type='text', placeholder='search', tab-index='1')
+      ul#_search-results-rows.dropdown-menu
+  script(type='text/template', id='tmpl-_search-results-row')
+    |<% if (type && type == 'header') { %>
+    |<%= name %>
+    |<% } else { %>
+    a(href!='<%= url %>') <%= name %>
+    |<% } %>
+  script(type='text/template', id='tmpl-_search-results-empty-row')
+    li.dropdown-header no docs matched
