--- a/public/views/index.less
+++ b/public/views/index.less
@@ -1,6 +1,7 @@
 @import '../less/../less/vars/bootstrap-vars';
 
 .jumbotron {
+  margin-top:20px;
   background-color: transparent;
   text-align: center;
   padding: 30px 60px;
