--- a/layouts/admin.jade
+++ b/layouts/admin.jade
@@ -6,21 +6,32 @@ block layoutCss
   link(rel='stylesheet', href='https://s3.amazonaws.com/outrightmental/vendor/font-awesome/css/font-awesome.min.css')
 
 block layoutNav
-  li.dropdown
-    a.dropdown-toggle(href='#', data-toggle='dropdown')
-      | System
-      span.caret
-    ul.dropdown-menu
-      li.dropdown-header Pivoted Settings
-      li: a(href='/admin/statuses/') Statuses
-      li: a(href='/admin/categories/') Categories
-      li.divider
-      li.dropdown-header User Admin
-      li: a(href='/admin/users/') Users
-      li: a(href='/admin/accounts/') Accounts
-      li: a(href='/admin/administrators/') Administrators
-      li: a(href='/admin/admin-groups/') Admin Groups
-  form.navbar-form.pull-right#_search
+  div.navbar.navbar-default.navbar-fixed-top
+    div.container
+      div.navbar-header
+        a.navbar-brand(href='/')
+          img.navbar-logo(src='/media/mental-roger-white.png' alt=navbar-brand-label #{projectName})
+        button.navbar-toggle.collapsed(data-toggle='collapse', data-target='.my-navbar-collapse')
+          span.icon-bar
+          span.icon-bar
+          span.icon-bar
+      div.navbar-collapse.my-navbar-collapse.collapse
+        ul.nav.navbar-nav.pull-right
+          li.dropdown
+            a.dropdown-toggle(href='#', data-toggle='dropdown')
+              | System
+              span.caret
+            ul.dropdown-menu
+              li.dropdown-header Pivoted Settings
+              li: a(href='/admin/statuses/') Statuses
+              li: a(href='/admin/categories/') Categories
+              li.divider
+              li.dropdown-header User Admin
+              li: a(href='/admin/users/') Users
+              li: a(href='/admin/accounts/') Accounts
+              li: a(href='/admin/administrators/') Administrators
+              li: a(href='/admin/admin-groups/') Admin Groups
+          form.navbar-form.pull-right#_search
 
 block layoutScripts
   script(src='/layouts/admin.min.js?#{cacheBreaker}')
