--- a/layouts/default.jade
+++ b/layouts/default.jade
@@ -5,12 +5,18 @@ block layoutCss
   link(rel='stylesheet', href='https://s3.amazonaws.com/outrightmental/vendor/font-awesome/css/font-awesome.min.css')
 
 block layoutNav
-  li: a(href='/') Home
-  li: a(href='/about/') About
-  li: a(href='/contact/') Contact
-  li: a(href='/signup/') Sign Up
-  li: a(href='/login/')
-    i.fa.fa-user
-    | Sign In
+  div.navbar.navbar-default.navbar-fixed-top
+    div.container
+      div.navbar-header
+        a.navbar-brand(href='/')
+          img.navbar-logo(src='/media/mental-roger-white.png' alt=navbar-brand-label #{projectName})
+        button.navbar-toggle.collapsed(data-toggle='collapse', data-target='.my-navbar-collapse')
+          span.icon-bar
+          span.icon-bar
+          span.icon-bar
+      div.navbar-collapse.my-navbar-collapse.collapse
+        ul.nav.navbar-nav.pull-right
+          li: a(href='/signup/') Sign Up
+          li: a(href='/login/') Login
 
 block layoutScripts
