--- a/public/layouts/core.less
+++ b/public/layouts/core.less
@@ -14,6 +14,11 @@ html, body {
   height: 100%;
 }
 
+img {
+  width:100%;
+  height:auto;
+}
+
 .wrapper {
   min-height: 100%;
   height: auto !important;
