--- a/views/login/index.jade
+++ b/views/login/index.jade
@@ -10,7 +10,7 @@ block body
   div.row
     div.col-sm-6
       div.page-header
-        h1 Sign In
+        h1 Login
       div#login
       if oauthTwitter || oauthGitHub || oauthFacebook
         hr
