Splash page featuring "Ticket Stub" messaging in order to entice user and set productive expectations  https://www.pivotaltracker.com/story/show/61670248

--- a/public/layouts/splash.less
+++ b/public/layouts/splash.less
@@ -2,8 +2,12 @@
 
 html {
   body {
-    padding-top: 20px;
+//    padding-top: 20px;
   }
+}
+
+.splash.ticket-stub {
+  padding-top:14px;
 }
 
 .splash.options {
