--- a/views/login/index.jade
+++ b/views/login/index.jade
@@ -36,7 +36,12 @@ block body
               a.btn.btn-info(href='/login/facebook/')
                 i.fa.fa-facebook-square.fa-lg
                 |  Facebook
-  
+      hr
+      p
+        | Or&nbsp;
+        a(href='/signup/') Sign Up.
+
+
   script(type='text/template', id='tmpl-login')
     form
       div.alerts
