--- a/layouts/splash.jade
+++ b/layouts/splash.jade
@@ -6,6 +6,19 @@ block layoutCss
   link(rel='stylesheet', href='https://s3.amazonaws.com/outrightmental/vendor/font-awesome/css/font-awesome.min.css')
 
 block layoutNav
+  div.navbar.navbar-default.navbar-fixed-top
+    div.container
+      div.navbar-header
+        a.navbar-brand(href='/')
+          img.navbar-logo(src='/media/mental-roger-white.png' alt=navbar-brand-label #{projectName})
+        button.navbar-toggle.collapsed(data-toggle='collapse', data-target='.my-navbar-collapse')
+          span.icon-bar
+          span.icon-bar
+          span.icon-bar
+      div.navbar-collapse.my-navbar-collapse.collapse
+        ul.nav.navbar-nav.pull-right
+          li: a(href='/signup/') Sign Up
+          li: a(href='/login/') Login
 
 block layoutScripts
   script(type="text/css")
