--- a/views/index.jade
+++ b/views/index.jade
@@ -17,6 +17,7 @@ block body
     div.col-md-6
       div.splash.options
         div
+          h1= __('splash.headline')
           a.btn.btn-primary.btn-lg(href='/login/') Login
           a.btn.btn-default.btn-lg(href='/signup/') Sign Up
         div.clearfix
