i18n https://www.pivotaltracker.com/story/show/61690428

--- a/public/views/index.less
+++ b/public/views/index.less
@@ -1,27 +1,9 @@
 @import '../less/../less/vars/bootstrap-vars';
 
-.jumbotron {
-  margin-top:20px;
-  background-color: transparent;
-  text-align: center;
-  padding: 30px 60px;
-  
+.splash {
   h1 {
-    font-weight: bold;
+    text-align:center;
+    margin-bottom: 20px;
+    margin-top:0;
   }
-  
-  @media (max-width: @screen-tablet) {
-    h1 {
-      font-size: (@font-size-base * 3.5);
-    }
-  }
-  @media (min-width: @screen-tablet) {
-    h1 {
-      font-size: (@font-size-base * 7.5);
-    }
-  }
-}
-
-.panel h3 {
-  margin-top: 0;
 }
