--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends ../layouts/splash
 
 block head
-  title Outright Mental Inc.
+  title= __('splash.title')
 
 block neck
   link(rel='stylesheet', href='/views/index.min.css?#{cacheBreaker}')
@@ -18,6 +18,6 @@ block body
       div.splash.options
         div
           h1= __('splash.headline')
-          a.btn.btn-primary.btn-lg(href='/login/') Login
-          a.btn.btn-default.btn-lg(href='/signup/') Sign Up
+          a.btn.btn-primary.btn-lg(href='/login/')= __('app.login')
+          a.btn.btn-default.btn-lg(href='/signup/')= __('app.signup')
         div.clearfix
