--- a/views/login/index.jade
+++ b/views/login/index.jade
@@ -1,7 +1,7 @@
 extends ../../layouts/default
 
 block head
-  title Login
+  title= __('app.login')
 
 block feet
   script(src='/views/login/index.min.js?#{cacheBreaker}')
@@ -10,36 +10,39 @@ block body
   div.row
     div.col-sm-6
       div.page-header
-        h1 Login
+        h1= __('app.login')
       div#login
       if oauthTwitter || oauthGitHub || oauthFacebook
         hr
-        p Or sign in using...
+        p= __('app.login.or-use-externals')
         if oauthMessage
           div.alerts
             div.alert.alert-info.alert-dismissable
               button.close(type='button', data-dismiss='alert') &times;
               |#{oauthMessage} 
               b
-                a(href='/signup/') Sign Up Here
+                a(href='/signup/')= __('app.signup.sign-up-here')
         div.form-actions
           div.btn-group.btn-group-justified
             if oauthTwitter
               a.btn.btn-info(href='/login/twitter/')
                 i.fa.fa-twitter.fa-lg
-                |  Twitter
+                = __('app.external.twitter')
             if oauthGitHub
               a.btn.btn-info(href='/login/github/')
                 i.fa.fa-github.fa-lg
-                |  GitHub
+                = __('app.external.github')
             if oauthFacebook
               a.btn.btn-info(href='/login/facebook/')
                 i.fa.fa-facebook-square.fa-lg
-                |  Facebook
+                =  __('app.external.facebook')
       hr
       p
-        | Or&nbsp;
-        a(href='/signup/') Sign Up.
+        | Don't have an account? Please
+        = " "
+        a(href='/signup/') Sign Up
+        = " "
+        | to create one.
 
 
   script(type='text/template', id='tmpl-login')
