--- a/public/views/index.less
+++ b/public/views/index.less
@@ -2,6 +2,8 @@
 
 .splash {
   h1 {
+    font-size:20pt;
+    font-weight: normal;
     text-align:center;
     margin-bottom: 20px;
     margin-top:0;
