nav https://www.pivotaltracker.com/story/show/61749116

--- a/layouts/_global.jade
+++ b/layouts/_global.jade
@@ -1,5 +1,7 @@
 doctype 5
 html
+  //  Author: Nick Kaye <nick@outrightmental.com>
+  //  Laboratory: Outright Mental Inc.
   | <script language="javascript" type="text/javascript">
   | //<![CDATA[
   | var tl_loc0=(window.location.protocol == "https:")? "https://secure.comodo.net/trustlogo/javascript/trustlogo.js" :
