--- a/public/layouts/admin.less
+++ b/public/layouts/admin.less
@@ -9,8 +9,8 @@
 }
 
 .navbar .nav > li > a {
-  text-transform: uppercase;
-  font-weight: bold;
+//  text-transform: uppercase;
+//  font-weight: bold;
 }
 
 .filters {
