--- a/public/layouts/core.less
+++ b/public/layouts/core.less
@@ -146,3 +146,9 @@ select, textarea, input, .form-control {
   white-space: -o-pre-wrap; /* Opera 7 */
   word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
+
+nbsp {
+  width: 0.5em;
+  display: inline-block;
+  white-space: nowrap;
+}
