--- a/layouts/account.jade
+++ b/layouts/account.jade
@@ -16,10 +16,6 @@ block layoutNav
           span.icon-bar
       div.navbar-collapse.my-navbar-collapse.collapse
         ul.nav.navbar-nav.pull-right
-          li: a(href='/account/') My Account
-          li: a(href='/account/settings/') Settings
-          li: a(href='/logout/')
-            i.fa.fa-user
-            | Sign Out
+          include common/nav
 
 block layoutScripts
