--- a/layouts/admin.jade
+++ b/layouts/admin.jade
@@ -16,22 +16,7 @@ block layoutNav
           span.icon-bar
           span.icon-bar
       div.navbar-collapse.my-navbar-collapse.collapse
-        ul.nav.navbar-nav.pull-right
-          li.dropdown
-            a.dropdown-toggle(href='#', data-toggle='dropdown')
-              | System
-              span.caret
-            ul.dropdown-menu
-              li.dropdown-header Pivoted Settings
-              li: a(href='/admin/statuses/') Statuses
-              li: a(href='/admin/categories/') Categories
-              li.divider
-              li.dropdown-header User Admin
-              li: a(href='/admin/users/') Users
-              li: a(href='/admin/accounts/') Accounts
-              li: a(href='/admin/administrators/') Administrators
-              li: a(href='/admin/admin-groups/') Admin Groups
-          form.navbar-form.pull-right#_search
+        include common/nav
 
 block layoutScripts
   script(src='/layouts/admin.min.js?#{cacheBreaker}')
