P.R. https://www.pivotaltracker.com/story/show/56053268

--- a/public/layouts/splash.less
+++ b/public/layouts/splash.less
@@ -8,11 +8,11 @@ html {
 
 .splash.ticket-stub {
   padding-top:14px;
+  margin-left:-16px;
+  margin-right:-16px;
 }
 
 .splash.options {
-  padding-left:10%;
-  padding-right:10%;
   a {
     margin-bottom:10px;
     width:100%;
