padding above footer https://www.pivotaltracker.com/story/show/61763778

--- a/public/layouts/core.less
+++ b/public/layouts/core.less
@@ -92,7 +92,7 @@ select, textarea, input, .form-control {
 }
 
 .footer {
-  margin-top: 0;
+  margin-top: 20px;
   color: #999;
   background-color: @footer-background-color;
 
