nav https://www.pivotaltracker.com/story/show/61749116

--- a/layouts/common/nav.jade
+++ b/layouts/common/nav.jade
@@ -26,4 +26,4 @@ ul.nav.navbar-nav.pull-right
         i.fa.fa-user
         nbsp
         = __('app.logout')
-  form.navbar-form.pull-right#_search
+// form.navbar-form.pull-right#_search
