--- a/views/account/index.jade
+++ b/views/account/index.jade
@@ -1,7 +1,7 @@
 extends ../../layouts/account
 
 block head
-  title Account Area
+  title= __('account.title')
 
 block neck
   link(rel='stylesheet', href='/views/account/index.min.css?#{cacheBreaker}')
@@ -13,5 +13,5 @@ block body
   div.row
     div.col-sm-6
       div.page-header
-        h1 We'll holler.
-        p We have a lot of weird, fun projects coming up in the next few years.  We'll be in touch.
+        h1#counter
+        p= __('account.subtext')
