Bower https://www.pivotaltracker.com/story/show/60912184

--- a/layouts/default.jade
+++ b/layouts/default.jade
@@ -15,8 +15,6 @@ block layoutNav
           span.icon-bar
           span.icon-bar
       div.navbar-collapse.my-navbar-collapse.collapse
-        ul.nav.navbar-nav.pull-right
-          li: a(href='/signup/') Sign Up
-          li: a(href='/login/') Login
+        include common/nav
 
 block layoutScripts
