--- a/public/less/theme/bootstrap-theme.less
+++ b/public/less/theme/bootstrap-theme.less
@@ -293,6 +293,10 @@ legend {
 	}
 }
 
+.page-header {
+  border-bottom-color: @page-header-border-color;
+}
+
 .breadcrumb {
 	border: 1px solid rgba(0, 0, 0, 0.6);
 	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
