--- a/public/less/vars/bootstrap-vars.less
+++ b/public/less/vars/bootstrap-vars.less
@@ -609,7 +609,7 @@
 @headings-small-color:        @gray-light;
 @blockquote-small-color:      @gray-light;
 @blockquote-border-color:     @gray-light;
-@page-header-border-color:    darken(@gray-darker, 5%);
+@page-header-border-color:    @gray-light;
 
 // Miscellaneous
 // -------------------------
