--- a/views/account/index.jade
+++ b/views/account/index.jade
@@ -13,5 +13,5 @@ block body
   div.row
     div.col-sm-6
       div.page-header
-        h1#counter
+        h1#countdown
         p= __('account.subtext')
