--- a/layouts/account.jade
+++ b/layouts/account.jade
@@ -8,14 +8,13 @@ block layoutNav
   div.navbar.navbar-default.navbar-fixed-top
     div.container
       div.navbar-header
-        a.navbar-brand(href='/')
+        a.navbar-brand(href='/account/')
           img.navbar-logo(src='/media/mental-roger-white.png' alt=navbar-brand-label #{projectName})
         button.navbar-toggle.collapsed(data-toggle='collapse', data-target='.my-navbar-collapse')
           span.icon-bar
           span.icon-bar
           span.icon-bar
       div.navbar-collapse.my-navbar-collapse.collapse
-        ul.nav.navbar-nav.pull-right
           include common/nav
 
 block layoutScripts
