--- a/layouts/admin.jade
+++ b/layouts/admin.jade
@@ -9,7 +9,7 @@ block layoutNav
   div.navbar.navbar-default.navbar-fixed-top
     div.container
       div.navbar-header
-        a.navbar-brand(href='/')
+        a.navbar-brand(href='/admin/')
           img.navbar-logo(src='/media/mental-roger-white.png' alt=navbar-brand-label #{projectName})
         button.navbar-toggle.collapsed(data-toggle='collapse', data-target='.my-navbar-collapse')
           span.icon-bar
