--- a/views/account/index.jade
+++ b/views/account/index.jade
@@ -14,7 +14,12 @@ block body
     div.col-sm-6
       div.page-header
         h1
-          = __('account.headline-pre') + ' '
+          = __('account.next.pre')
+          br
+          = __('account.next.main')
+          br
+          = __('account.next.premieres')
+          nbsp
           span#fromNow
-          = __('account.headline-post')
-      p= __('account.subtext')
+          | !
+      p= __('account.next.post')
